--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,17 +229,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 30px 0 20px 0;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
-  font-family: "Cursive";
+  color: #212431;
+
 }
 
 #hero p {
   color: #fff;
-  margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
 }
@@ -259,8 +258,13 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
   #hero h1 {
-    font-size: 28px;
+    font-size: 40px;
     line-height: 36px;
+  }
+  #hero p {
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 30px;
   }
   #hero h2 {
     font-size: 18px;
