--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,8 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #000000;
+  color: white;
+  background-color: black;
 }
 
 a {
@@ -67,7 +68,8 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #040b14;
+  background: rgb(39, 38, 38);
+  color:black;
   overflow-y: auto;
 }
 
@@ -96,8 +98,8 @@ h1, h2, h3, h4, h5, h6 {
 #header .profile .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #212431;
-  color: #fff;
+  background: black;
+  color: white;
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -233,7 +235,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #212431;
+  color: rgb(39, 38, 38);
 
 }
 
@@ -282,7 +284,8 @@ section {
 }
 
 .section-bg {
-  background: #f5f8fd;
+  background: black;
+  color:white;
 }
 
 .section-title {
@@ -295,7 +298,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #173b6c;
+  color: #327feb;
 }
 
 .section-title h2::after {
@@ -304,7 +307,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #149ddd;
+  background: #327feb;
   bottom: 0;
   left: 0;
 }
@@ -319,7 +322,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #173b6c;
+  color: #095ed6;
 }
 
 .about .content ul {
@@ -365,7 +368,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #050d18;
+  color: white;
 }
 
 .skills .progress .skill .val {
@@ -393,13 +396,13 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #050d18;
+  color: #327feb;
 }
 
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #1f5297;
+  border-left: 2px solid rgb(8, 70, 156);
   position: relative;
 }
 
@@ -409,13 +412,13 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #050d18;
+  color: #9bc5ff;
   margin-bottom: 10px;
 }
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #e4edf9;
+  background: #232324;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -442,7 +445,8 @@ section {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #fff;
+  background: black;
+  color:white;
   border: 2px solid #1f5297;
 }
 
@@ -463,7 +467,7 @@ section {
   margin: 0 auto 35px auto;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background:#272829;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -476,7 +480,7 @@ section {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #272829;
+  color: white;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
@@ -570,7 +574,8 @@ section {
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
-  background-color: #fff;
+  background-color: black;
+  color:white;
   opacity: 1;
   border: 1px solid #149ddd;
 }
@@ -581,7 +586,7 @@ section {
 
 .portfolio-details .portfolio-info {
   padding: 30px;
-  box-shadow: 0px 0 30px rgba(5, 13, 24, 0.08);
+  box-shadow: 0px 0 30px rgba(255, 255, 255, 0.3);
 }
 
 .portfolio-details .portfolio-info h3 {
@@ -625,9 +630,9 @@ section {
 
 .contact .info {
   padding: 30px;
-  background: #fff;
+  background: black;
   width: 100%;
-  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 0 24px 0 rgba(255, 255, 255, 0.5);
 }
 
 .contact .info i {
@@ -636,7 +641,7 @@ section {
   float: left;
   width: 44px;
   height: 44px;
-  background: #dff3fc;
+  background: black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -649,14 +654,14 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #050d18;
+  color:#095ed6;
 }
 
 .contact .info p {
   padding: 0 0 10px 60px;
   margin-bottom: 20px;
   font-size: 14px;
-  color: #173b6c;
+  color: #ffffff;
 }
 
 .contact .info .email p {
@@ -695,8 +700,8 @@ section {
 .contact .php-email-form {
   width: 100%;
   padding: 30px;
-  background: #fff;
-  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
+  background: black;
+  box-shadow: 0 0 24px 0 rgba(255, 255, 255, 0.5);
 }
 
 .contact .php-email-form .form-group {
@@ -811,7 +816,8 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 20px 0;
-  background: #f9f9f9;
+  background: #000000;
+  color:white;
 }
 
 .breadcrumbs h2 {
@@ -863,7 +869,7 @@ section {
   bottom: 0;
   width: 300px;
   z-index: 9999;
-  background: #040b14;
+  background: rgb(39, 38, 38);
 }
 
 #footer .copyright {
