--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,19 +63,29 @@ h1, h2, h3, h4, h5, h6 {
     width:100%;
     height:100vh;
     position: fixed;
-    background-color: rgb(158, 253, 158);
+    background-color: rgb(39, 38, 38);
     z-index:10000;
     perspective: 200px;
+}
+.square h1
+{
+  font-size: 70px;
+  color: rgb(205, 209, 255);
+  position:absolute;
+  width: 100%;
+  margin-top:15vh;
+  font-family: 'Permanent Marker', cursive;
+  text-align: center;
 }
 .square div
 {
     position:absolute;
     margin:auto;
-    margin-left:45%;
+    margin-left:44%;
     margin-top:50vh;
     width:80px;
     height:80px;
-    background-color: rgb(230, 65, 5);
+    background-color: white;
     animation:flip 2s linear infinite;
     transform-origin: right bottom;
 }
