--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,13 +107,15 @@ h1, h2, h3, h4, h5, h6 {
 {
     .square 
     {
-        width:150px;
-        height:150px;
-        position:relative;
         perspective: 150px;
+    }
+    .square h1
+    {
+      font-size:50px;
     }
     .square div
     {
+        margin-left:40%;
         width:60px;
         height:60px;
     }
