--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -836,6 +836,8 @@ section {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
+  background-color: #2f3031;
+  color: white;
 }
 
 .contact .php-email-form input {
