--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,6 +499,60 @@ section {
   padding-bottom: 10px;
 }
 
+/* .resume #resumebtn
+{
+    background-color: #0246a5;
+    color: #fff;
+    font-size: 20px;
+    padding-top:10px;
+    padding-bottom:10px;
+    border-radius: 2px;
+    width: 30%;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-left:5%;
+    word-wrap: break-word;
+}
+.resume #resumebtn:hover
+{
+  background-color:#0246a5a6;
+} */
+
+.resume #resumebtn{
+  display:inline-block;
+  padding:0.35em 1em;
+  margin:0.3em 3em 0.3em 2em;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  background-color: #0246a5;
+  color: #fff;
+  font-size: 20px;
+  max-height:20vh;
+  width:30%;
+  text-align:center;
+  transition: all 0.3s;
+}
+.resume #resumebtn:hover{
+  background-color:#0246a5a6;
+}
+@media all and (max-width:426px){
+  .resume #resumebtn
+  {
+    width:80%;
+  }
+}
+@media (min-width:427px) and (max-width:772px){
+  .resume #resumebtn
+  {
+    width:50%;
+  }
+}
+  
+
 .resume .resume-item:last-child {
   padding-bottom: 0;
 }
